SONAR-16260 improve project analysis when using project analysis token